--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -4,16 +4,20 @@
     align-items: center;
     justify-content: center;
     background-color: rgb(154,123,115);
-    width: 25%; 
+    width: 150x; 
     justify-self: center;
 
 }
 .Controls{
     display: flex; 
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     background-color: rgb(154,123,115);
     justify-self: center;
 
+}
+h4{
+    color: white; 
 }
