--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,12 +4,10 @@
     flex-direction: row;
     justify-content: center;
 }
-.RRSS{
 
-}
 
 li{
     list-style: none;
     color: rgb(247,246,226); 
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+    font-family:  'Courier Prime', monospace; 
 }
