--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,24 +1,24 @@
-.cartContainer {
+.CartContainer {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    border: 1rem; 
+    background-color: rgb(154,123,115);
   }
   
-  .cartBtns {
+  .CartBtn {
     display: flex;
     align-items: center;
     gap: 1rem;
   }
   
-  .cartBtn {
-    border: none;
-    outline: none;
-    background: transparent;
-  }
   
   .cartPrice {
     font-size: 1.2rem;
     font-weight: 600;
   }
   
+  .ContenedorItemsCarro{
+    background-color: rgb(154,123,115) ;
+  }
