--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,3 +11,11 @@ li{
     color: rgb(247,246,226); 
     font-family:  'Courier Prime', monospace; 
 }
+
+.SiteLinks{
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    margin: 5px; 
+    padding: 5px; 
+}
