--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,8 +3,16 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 20px;
 }
-
+.RRSS{
+    display: flex; 
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 10px; 
+    margin: 5px; 
+}
 
 li{
     list-style: none;
