--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -16,6 +16,7 @@
 }
 h2{
     font-family: 'Courier Prime', monospace;
+    text-decoration: none;
 }
 p{
     font-family: 'Courier Prime', monospace;
