--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,11 @@
     background-color: rgb(116,119,74); 
     color: rgb(247,248,248); 
     
+    
 
+}
+.Option.clicked{
+    color: white; 
 }
 
 
