--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -5,6 +5,8 @@
     padding: 1rem;
     border: 1rem; 
     background-color: rgb(154,123,115);
+    margin: 20px; 
+    border-radius: 3%;
   }
   
   .CartBtn {
@@ -21,4 +23,10 @@
   
   .ContenedorItemsCarro{
     background-color: rgb(154,123,115) ;
+  }
+
+  .cartBtnsCant{
+    display: flex; 
+    flex-direction: row;
+    align-content: center;
   }
