--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -6,7 +6,7 @@
     border: 1rem; 
     background-color: rgb(154,123,115);
     margin: 20px; 
-    border-radius: 3%;
+    border-radius: 10px;
   }
   
   .CartBtn {
